# Customize-Mujoco-Plugins

./: .gitignore  MJDATA.TXT  MUJOCO_LOG.TXT  README.md  auto_script.sh  compile_commands.json  docker_build.sh  script.sh  test_joint_controller.xml  test_joint_sensor.xml  test_sensor.xml  test_spring_damper.xml
.cache/clangd/index/: mjdata.h.2C391CD458CD7093.idx  mjexport.h.9A2F704C0FEA94D0.idx  mjmacro.h.92CE679398FB9E0F.idx  mjmodel.h.E882F73A807344D6.idx  mjplugin.h.20D646B652810E91.idx  mjrender.h.783B8CD74DD014B8.idx  mjsan.h.45C2381BF2104AA1.idx  mjspec.h.7DA8702A69DCBE3A.idx  mjthread.h.266FCB48CBA9A17A.idx  mjtnum.h.919AFBE73385489A.idx  mjui.h.AD45D640C0C89A5E.idx  mjvisualize.h.A10A7AEBBB14B04E.idx  mujoco.h.8978B3B4414D4C70.idx
docker/: docker-compose.yaml
docker/ubuntu-focal/: Dockerfile
docker/ubuntu-noble/: Dockerfile
my_plugins/controller/: CMakeLists.txt  ctrl_pdff.cc  ctrl_pdff.h
my_plugins/controller/include/: ctrl_pdff.h
my_plugins/controller/src/: ctrl_pdff.cc  register.cc
my_plugins/damper/: CMakeLists.txt  register.cc  spring_damper.cc  spring_damper.h
my_plugins/damper/.cache/clangd/index/: register.cc.68A3E22CB4A69E58.idx  spring_damper.cc.E5489309CCF8CF46.idx  spring_damper.h.86FD094ADB6A3D04.idx
my_plugins/inspector/: CMakeLists.txt
my_plugins/inspector/include/: controller_interface.hpp  inspector.h
my_plugins/inspector/src/: controller_interface.cpp  inspector.cc  register.cc
release/lib/cmake/mujoco/: mujocoConfigVersion.cmake  mujocoTargets-release.cmake
